# open_manipulator_applications

./: README.md
extra_urdf/: open_manipulator_realsense.gazebo.xacro  open_manipulator_realsense.urdf.xacro
open_manipulator_apple/: CMakeLists.txt  package.xml
open_manipulator_apple/include/open_manipulator_apple/: open_manipulator_apple (copy).h  open_manipulator_apple.h
open_manipulator_apple/include/open_manipulator_person/: open_manipulator_person.h
open_manipulator_apple/include/open_manipulator_taltal/: open_manipulator_taltal.h
open_manipulator_apple/launch/: open_manipulator_apple (copy).launch  open_manipulator_apple.launch  open_manipulator_apple2.launch  open_manipulator_person.launch  open_manipulator_taltal.launch
open_manipulator_apple/src/: open_manipulator_apple (copy).cpp  open_manipulator_apple.cpp  open_manipulator_person.cpp  open_manipulator_taltal.cpp
